Pull request #1300: fix sidebar items
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit acaf5ea9b594018cd45afa2fd858dc1f7d1a9923
Merge: 9d1f06c8b c122ff52b
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Jul 22 14:40:12 2022 +0300

    merge

commit 9d1f06c8bef3c339d213048b1af4007fb69dc03d
Merge: b07892555 4ff67be9a
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jul 21 17:18:14 2022 +0300

    AG-15435 merge

commit b078925554f5e90d6612285386c739af0b2b917e
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jul 21 17:15:28 2022 +0300

    AG-15435 fix in light theme

commit 7ad75d0d9ae7beb6e459f3fc39aefddfd875d606
Merge: 8ed832aca ba5d3df6d
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Jul 21 17:07:45 2022 +0300

    merge

commit 8ed832aca1738ffd5c97a5c37e6ab1733f9d940a
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Jul 20 16:44:02 2022 +0300

    AG-15435 fix sidebar items

--- a/Extension/src/pages/options/components/Nav/nav.pcss
+++ b/Extension/src/pages/options/components/Nav/nav.pcss
@@ -25,7 +25,7 @@
             background-color: var(--gray300);
 
             @media (prefers-color-scheme: dark) {
-                color: var(--grayDark);
+                background-color: var(--gray900);
             }
         }
 
@@ -36,7 +36,7 @@
             overflow: visible;
 
             @media (prefers-color-scheme: dark) {
-                color: var(--grayDark);
+                background-color: var(--gray900);
             }
 
             &:before {
@@ -47,6 +47,10 @@
                 width: 4px;
                 height: 100%;
                 background-color: var(--gray900);
+
+                @media (prefers-color-scheme: dark) {
+                    background-color: var(--grayDark);
+                }
             }
         }
 
@@ -67,10 +71,12 @@
 
             &:hover {
                 color: var(--gray-base);
+                background-color: var(--gray300);
             }
 
             &--active {
                 color: var(--gray-base);
+                background-color: var(--gray300);
             }
         }
     }
@@ -82,11 +88,15 @@
             color: var(--gray300);
 
             &:hover {
-                color: var(--grayDark);
+                background-color: var(--gray900);
             }
 
             &--active {
-                color: var(--grayDark);
+                background-color: var(--gray900);
+
+                &:before {
+                    background-color: var(--grayDark);
+                }
             }
         }
     }
